# backend/src/main/java/com/group1/programminglanguagesforum/DTOs/Responses/GetAnswersResponseDto.java
@@ -26,7 +26,7 @@ public class GetAnswersResponseDto {
         private Long upvoteCount;
         private Long downvoteCount;
         private boolean selfAnswer;
-        private boolean selfVoted;
+        private Integer selfVoted;
     }
 
 }
