# backend/src/main/java/com/group1/programminglanguagesforum/DTOs/Responses/GetQuestionDetailsResponseDto.java
@@ -18,7 +18,7 @@ public class GetQuestionDetailsResponseDto {
     private Long dislikeCount;
     private Long commentCount;
     private Boolean selfQuestion;
-    private Boolean selfVoted;
+    private Integer selfVoted;
     private String createdAt;
     @Builder.Default
     private List<TagDto> tags= new ArrayList<>();
